[package]
name = "tokenserver-auth"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
sha2.workspace = true
thiserror.workspace = true
slog-scope.workspace = true

dyn-clone = "1.0.4"
reqwest = { workspace = true, features = ["json"] }
ring = "0.17"
syncserver-common = { path = "../syncserver-common" }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true }
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }


[dev-dependencies]
# mockito = "0.30"
mockito = "1.4.0"
tokio = { workspace = true, features = ["macros"] }

[features]
py = ["pyo3", "tokenserver-common/py"]
