[package]
name = "tokenserver-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
tokio.workspace = true

pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }
syncserver-common = { path = "../syncserver-common" }

[features]
default = ["py"]
py = ["pyo3"]