[package]
name = "tokenserver-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
http.workspace = true
serde.workspace = true
utoipa.workspace = true

pyo3 = { version = "0.27", features = ["auto-initialize"], optional = true }
syncserver-common = { path = "../syncserver-common" }

[features]
py = ["pyo3"]
