[package]
name = "tokenserver-db-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true


diesel = { workspace = true, features = ["postgres", "r2d2"] }
diesel-async = { workspace = true }
diesel_logger = { workspace = true }
diesel_migrations = { workspace = true, features = ["postgres"] }