[package]
name = "tokenserver-db-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
deadpool = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2"] }
diesel-async = { workspace = true, features = ["postgres"] }
diesel_logger = { workspace = true }
diesel_migrations = { workspace = true, features = ["postgres"] }

syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
tokenserver-db-common = { path = "../tokenserver-db-common" }
tokenserver-settings = { path = "../tokenserver-settings" }