[package]
name = "tokenserver-db"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
slog-scope.workspace = true

deadpool = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_logger = { workspace = true }
diesel_migrations = { workspace = true, features = ["mysql"] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-db-common = { path = "../tokenserver-db-common" }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true, features = ["macros", "sync"] }

[dev-dependencies]
env_logger.workspace = true

syncserver-settings = { path = "../syncserver-settings" }
