[package]
name = "tokenserver-db"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
deadpool.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_logger.workspace = true
diesel_migrations.workspace = true
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-db-common = { path = "../tokenserver-db-common" }
tokenserver-db-postgres = { path = "../tokenserver-db-postgres", optional = true }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true, features = ["macros", "sync"] }
url = "2.1"

[dev-dependencies]
env_logger.workspace = true

syncserver-settings = { path = "../syncserver-settings" }

[features]
postgres = ['tokenserver-db-postgres']
