[package]
name = "tokenserver-db"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
tokenserver-db-common = { path = "../tokenserver-db-common" }
tokenserver-mysql = { path = "../tokenserver-mysql", optional = true }
tokenserver-postgres = { path = "../tokenserver-postgres", optional = true }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true, features = ["macros", "sync"] }
url = "2.5"

[dev-dependencies]
env_logger.workspace = true
temp-env.workspace = true

syncserver-settings = { path = "../syncserver-settings" }

[features]
default = ["mysql"]
mysql = ['tokenserver-mysql']
postgres = ['tokenserver-postgres']
