[package]
name = "tokenserver-mysql"
version = "0.10.2"
edition = "2021"

[dependencies]
async-trait = "0.1.40"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_logger = "0.1.1"
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
futures = { version = "0.3", features = ["compat"] }
http = "0.2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
slog-scope = "4.3"
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncstorage-mysql = { path = "../syncstorage-mysql" }
tokenserver-settings = { path = "../tokenserver-settings" }
# pinning to 0.2.4 due to high number of dependencies (actix, bb8, deadpool, etc.)
tokio = { version = "0.2.4", features = ["macros", "sync"] }

[dev-dependencies]
syncserver-settings = { path = "../syncserver-settings" }
env_logger = "0.9"
