[package]
name = "tokenserver-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
deadpool.workspace = true
diesel = { workspace = true, features = ["postgres"] }
diesel-async = { workspace = true, features = ["postgres"] }
diesel_migrations.workspace = true
http.workspace = true

syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-db-common = { path = "../tokenserver-db-common" }
tokenserver-settings = { path = "../tokenserver-settings" }
