[project]
name = "hawk"
version = "0.1.0"
description = "Hawk Compatible Auth Header Utility"
authors = [
    {name = "Taddes",email = "tkorris@mozilla.com"}
]
readme = "README.md"
requires-python = ">=3.10"


[tool.poetry.dependencies]
hawkauthlib = "^2.0.0"
tokenlib = "^2.0.0"
webob = "^1.8.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
