[project]
name = "hawk"
version = "0.1.0"
description = "Hawk Compatible Auth Header Utility"
authors = [
    {name = "Taddes",email = "tkorris@mozilla.com"}
]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
hawkauthlib = "^2.0.0"
tokenlib = "^2.0.0"
webob = "^1.8.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.3"
pydocstyle = "^6.3.0"
ruff = "^0.15.6"
black = "^26.3.1"
bandit = "^1.9.4"
isort = "^8.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
