[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for Syncstorage-rs and Tokenserver."
authors = [
    {name = "Taddes",email = "tkorris@mozilla.com"}
]
readme = "README.md"
requires-python = ">=3.10.0"
license = "Mozilla Public License Version 2.0"


[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
cryptography = "46.0.5"
hawkauthlib = "^2.0.0"
konfig = "^1.1"
mysqlclient = "^2.2.7"
psycopg2-binary = "^2.9.11"
psutil = "^7.0.0"
pyjwt = "^2.10.1"
pyramid = "^1.10.8"
pyramid-hawkauth = "^2.0.0"
pyfxa = "0.8.1"
pytest = "^9.0.2"
requests = "^2.32.4"
simplejson = "^3.20.1"
sqlalchemy = "^1.4.46"
tokenlib = "^2.0.0"
webtest = "^3.0.6"
wsgiproxy2 = "^0.5.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pydocstyle = "^6.3.0"
ruff = "^0.15.6"
black = "^26.3.1"
bandit = "^1.9.4"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
