[package]
name = "migration_rs"
version = "0.1.0"
authors = ["jrconlin <jr+git@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="1.1"
base64="0.12"
hex="0.4"
futures="0.3"
pool = "0.1"
# eventually use these
#diesel = {version="1.4", features=["mysql", "r2d2"]}
#diesel_logger = "0.1"
# quick hack:
mysql_async="0.22"
env_logger = "0.7"
failure="0.1"
googleapis-raw={version="0", path="../../vendor/mozilla-rust-sdk/googleapis-raw"}
grpcio={version="0.5"}
log={version="0.4", features=["max_level_info", "release_max_level_info"]}
protobuf = "2.7"
rand="0.7"
serde={version="1.0", features=["derive"]}
serde_derive="1.0"
serde_json={version="1.0", features=["arbitrary_precision"]}
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_error"] }
slog-async = "2.4"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.3"
slog-stdlog = "4.0"
slog-term = "2.5"
time = "0.2.9"
url="2.1"
structopt="0.3"