[project]
name = "payload-reconciler"
version = "0.1.0"
description = "Pub/Sub-driven reconciler for GCS payload objects: finalizes newly-committed objects (committed=true, customTime=MAX) and deletes orphaned ones whose payload_link was replaced or removed."
authors = [
    {name = "Mozilla Sync"}
]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
google-cloud-pubsub = "^2.23.0"
google-cloud-storage = "^2.18.0"
statsd = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.19.1"
pydocstyle = "^6.3.0"
ruff = "^0.15.6"
black = "^26.3.1"
bandit = "^1.9.4"
isort = "^8.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
