[project]
name = "postgres-tools"
version = "0.1.0"
description = "Scripts for syncstorage-rs on Postgres"
authors = [
    {name = "Mozilla"}
]
license = "Mozilla Public License Version 2.0"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
statsd = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.19.1"
pydocstyle = "^6.3.0"
ruff = "^0.15.8"
black = "^26.3.1"
bandit = "^1.9.4"
isort = "^8.0.1"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
