[project]
name = "spanner"
version = "0.1.0"
description = "Spanner utility scripts for syncstorage-rs for working with GCP."
authors = [
    {name = "Taddes",email = "tkorris@mozilla.com"}
]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
google-cloud-spanner = ">=1.16.0"
statsd = "^4.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
