[project]
name = "spanner"
version = "0.1.0"
description = "Spanner utility scripts for syncstorage-rs for working with GCP."
authors = [
    {name = "Taddes",email = "tkorris@mozilla.com"}
]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
google-cloud-spanner = ">=3.63.0"
protobuf = ">=5.29,<7.0.0"
statsd = "^4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
pytest = "^8.4.0"
pydocstyle = "^6.3.0"
ruff = "^0.12.7"
black = "^25.1.0"
bandit = "^1.8.3"
isort = "^6.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["../.."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
